# webserver/docs/swagger.json
@@ -1,15 +1,17 @@
 {
     "consumes": [
         "application/json",
+        "application/json",
         "application/json"
     ],
     "produces": [
+        "application/json",
         "application/json",
         "application/json"
     ],
     "swagger": "2.0",
     "info": {
-        "description": "Image creation time",
+        "description": "Prompts creation time",
         "title": "User Management API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
@@ -94,6 +96,182 @@
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/prompts": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Retrieve all prompts created by a specific user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "prompts"
+                ],
+                "summary": "Get list of prompts by user ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "filter by user ID",
+                        "name": "user_id",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/main.Prompt"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Create a new prompt with the provided details",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "prompts"
+                ],
+                "summary": "Create a new prompt",
+                "parameters": [
+                    {
+                        "description": "Prompt details",
+                        "name": "prompt",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.Prompt"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/main.Prompt"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/prompts/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Retrieve a specific prompt by its ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "prompts"
+                ],
+                "summary": "Get a prompt by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Prompt ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.Prompt"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -740,6 +918,40 @@
                 },
                 "user": {
                     "$ref": "#/definitions/main.User"
+                }
+            }
+        },
+        "main.Prompt": {
+            "description": "Prompts 提示词 结构体",
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "description": "@Description\tPrompts creation time",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "@Description\tPrompts ID",
+                    "type": "integer"
+                },
+                "image_id": {
+                    "description": "@Description\tPrompts image ID",
+                    "type": "integer"
+                },
+                "inference_steps": {
+                    "description": "@Description\tPrompts inference step",
+                    "type": "integer"
+                },
+                "negative_prompt_text": {
+                    "description": "@Description\tPrompts negative text",
+                    "type": "string"
+                },
+                "prompt_text": {
+                    "description": "@Description\tPrompts text",
+                    "type": "string"
+                },
+                "user_id": {
+                    "description": "@Description\tPrompts user ID",
+                    "type": "integer"
                 }
             }
         },
